# dotfiles

./: .gitignore  README.md  install.sh  update.sh
home/: .condarc  .gitconfig  .pathrc  .tmux.conf  .vimrc  .ycm_extra_conf.py  .zshrc  coc-settings.json
py/: linter.sh  setup.cfg
vim/: my_configs.vim
vim/temp_dirs/undodir/: %Users%apple%.bash_profile  %Users%apple%.bashrc  %Users%apple%.oh-my-zsh%themes%agnoster-fcamblor.zsh-theme  %Users%apple%.ssh%config  %Users%apple%.ssh%known_hosts  %Users%apple%.vim_runtime%vimrcs%basic.vim  %Users%apple%.vim_runtime%vimrcs%extended.vim  %Users%apple%.zshrc  %Users%apple%workspace%CRNN_Chinese_Characters_Rec%demo.py  %Users%apple%workspace%coderepo%bezier_curve.py  %Users%apple%workspace%coderepo%doctest.py  %Users%apple%workspace%coderepo%doctest_ex.py  %Users%apple%workspace%coderepo%hough.py  %Users%apple%workspace%coderepo%manotorch%app.py  %Users%apple%workspace%coderepo%onedollar_python%recognizer_demo.py  %Users%apple%workspace%coderepo%parallel101%01%01%main.cpp  %Users%apple%workspace%coderepo%parallel101%01%01%run.sh  %Users%apple%workspace%coderepo%parallel101%01%02%hello.cpp  %Users%apple%workspace%coderepo%parallel101%01%02%main.cpp  %Users%apple%workspace%coderepo%parallel101%01%02%run.sh  %Users%apple%workspace%coderepo%parallel101%01%03%Makefile  %Users%apple%workspace%coderepo%parallel101%01%04%CMakLists.txt  %Users%apple%workspace%coderepo%parallel101%01%05%CMakeLists.txt  %Users%apple%workspace%coderepo%parallel101%01%06%CMakeLists.txt  %Users%apple%workspace%coderepo%parallel101%01%07%CMakeLists.txt  %Users%apple%workspace%coderepo%parallel101%01%07%hello.h  %Users%apple%workspace%coderepo%parallel101%01%07%main.cpp  %Users%apple%workspace%coderepo%parallel101%01%07%other.cpp  %Users%apple%workspace%coderepo%parallel101%01%08%MyClass.h  %Users%apple%workspace%coderepo%parallel101%01%08%hello.cpp  %Users%apple%workspace%coderepo%parallel101%01%08%hello.h  %Users%apple%workspace%coderepo%parallel101%01%08%main.cpp  %Users%apple%workspace%coderepo%parallel101%01%09%CMakeLists.txt  %Users%apple%workspace%coderepo%parallel101%01%09%MyClass.h  %Users%apple%workspace%coderepo%parallel101%01%09%goodbye.cpp  %Users%apple%workspace%coderepo%parallel101%01%09%goodbye.h  %Users%apple%workspace%coderepo%parallel101%01%09%main.cpp  %Users%apple%workspace%coderepo%parallel101%01%10%CMakeLists.txt  (+84 more)
vim/vimrcs/: basic.vim  extended.vim  filetypes.vim  my_plugins_config.vim  plugins_config.vim  vim-plug_plugins_config.vim
(+1 files in other folders)
