# Project-wide configuration file, can be used for package metadata and other toll configurations
# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments
# Local usage: pip install pre-commit, pre-commit run --all-files

[metadata]
license_file = LICENSE
description_file = README.md

[flake8]
max-line-length = 88
max-complexity = 18
# select = E,W,F
select = B,C,E,F,W,T4,B9
exclude =
    .git,
    __pycache__,
    build
per-file-ignores =
    __init__.py:F401,F403,E402
ignore =
    E402 # module level import not at top of file
    W503 # line break occurred before a binary operator
    W504 # Line break occurred after a binary operator
    W292 # No newline at end of file
    E203 # Whitespace before ':'
    E166 # Too many leading '#' for block comment

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
default_section = THIRDPARTY
lines_after_imports = 2
combine_as_imports = True
force_alphabetical_sort_within_sections = True


[black]
line_length = 88

# [yapf]
# based_on_style = google
# column_limit = 88
# indent_width = 4
# continuation_indent_width = 4
# indent_dictionary_value = true
# split_arguments_when_comma_terminated = true
# join_multiple_lines = false
# split_before_first_argument = true
